<resources>
    <string name="app_name">Shotaro_Kumagai_MyRuns5</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="profile_title">Name, Email, Class, etc</string>
    <string name="profile_sub">User Profile</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="privacy_setting_sub">Posting your records anonymously</string>
    <string name="additional_setting">Additional Setting</string>
    <string name="unit_preference">Unit Preference</string>
    <string name="unit_preference_sub">Select the units</string>
    <string name="comments">Comments</string>
    <string name="comments_sub">Please enter your comments</string>
    <string name="misc">Misc</string>
    <string name="web_page">Webpage</string>
    <string name="web_page_sub">https://www.sfu.ca/computing.html</string>
    <string name="photo">Profile Photo:</string>
    <string name="name">Name</string>
    <string name="mail">Email</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="class_title">Class</string>
    <string name="major">Major</string>
    <string name="name_input">Your Name</string>
    <string name="mail_input">Your Email</string>
    <string name="phone_input">Your Phone Number</string>
    <string name="female_radio">Female</string>
    <string name="male_radio">Male</string>
    <string name="class_input">eg.2012</string>
    <string name="major_input">Your Major</string>
    <string name="change_button">Change</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="profile">profile</string>
    <string name="unit_kilometers">Metric (Kilometers)</string>
    <string name="unit_miles">Imperial (Miles)</string>
    <string name="open_camera">Open Camera</string>
    <string name="select_from_gallery">Select from Galley</string>
    <string name="start">Start</string>
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity Type</string>
    <string name="date_and_time">Date and time</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="note">How did it go? Notes here.</string>
    <string-array name="inputs">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activities">
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Hiking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
    <string-array name="menu">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart Rate</item>
        <item>Comment</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="ui_collector_radio_standing_title">Standing</string>
    <string name="ui_collector_radio_walking_title">Walking</string>
    <string name="ui_collector_radio_running_title">Running</string>
    <string name="ui_collector_radio_other_title">Others</string>
    <string name="ui_collector_button_start_title">Start collecting</string>
    <string name="ui_collector_button_stop_title">Stop collecting</string>
    <string name="ui_collector_button_delete_title">Delete Data</string>
    <string name="ui_collector_toast_file_deleted">All files deleted.</string>
    <string name="ui_sensor_service_notification_ticker">Collector started recording.</string>
    <string name="ui_sensor_service_notification_title">MyRuns Collector</string>
    <string name="ui_sensor_service_notification_content">Recording your activity data now</string>
    <string name="ui_sensor_service_toast_success_file_updated">Data file updated.</string>
    <string name="ui_sensor_service_toast_success_file_created">Data file created.</string>
    <string name="ui_sensor_service_toast_error_file_saving_failed">Failed saving the file. Check your storage.</string>
</resources>
