<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_preferences"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:text="@string/profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <TextView
                android:text="@string/profile_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="10"
            >
            <TextView
                android:text="@string/privacy_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:text="@string/privacy_setting_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_setting"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:text="@string/unit_preference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:text="@string/unit_preference_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:text="@string/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:text="@string/comments_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misc"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:text="@string/web_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:text="@string/web_page_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
</ScrollView>